--- a/main.css
+++ b/main.css
@@ -84,8 +84,8 @@ body {
 .first-part .temp .deg {
     font-size: 35px;
     font-weight: 600;
-    margin: 0 -45px -25px;
-    color: fuchsia;
+    margin: 0 -45px -25px 0;
+    color: red;
 }
 
 .first-part .temp .number {
